<resources>
    // Strings die gemaakt zijn door Jeroen van Ottelen
    <string name="action_settings">HS Leiden</string>
    <string name="app_name">HS Leiden</string>
    <string name="menu_item_1">Invoeren</string>
    <string name="menu_item_2">Overzicht</string>
    <string name="title_activity_overzicht">OverzichtActivity</string>
    <string name="reset">Reset</string>
    <string name="overzicht_radio_1">Per vak</string>
    <string name="overzicht_radio_2">Per periode</string>
    <string name="recent_ingevoerd">Recent ingevoerde cijfers</string>

    // Strings die gemaakt zijn door Richard Jongenburger
    // Activity names
    <string name="subjects">Vakken</string>
    <string name="subject_details">Vak details</string>
    <string name="overview">Overzicht</string>

    //VakDetails
    <string name="subject_details_name">Name</string>
    <string name="subject_details_ects">ECTS </string>
    <string name="subject_details_period">Periode</string>
    <string name="subject_details_grade">Cijfer</string>

    <string name="subject_details_submit">Opslaan</string>
    <string name="subject_details_cancel">Annuleer</string>
</resources>
