<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.jeroen_van_ottelen.ikpmd_nieuwe_app.activity.VakDetailActivity">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gridLayout2"
        android:orientation="horizontal"
        android:rowCount="6"
        android:columnCount="14"
        android:horizontalSpacing="0dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/subject_details_ects"
            android:id="@+id/textView9"
            android:layout_row="3"
            android:layout_column="0"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/subject_details_period"
            android:id="@+id/textView4"
            android:layout_row="4"
            android:layout_column="0"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="3"
            android:id="@+id/subjectEcts"
            android:layout_row="3"
            android:layout_column="13"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="17dp"
            android:textSize="20sp"
            android:singleLine="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="1"
            android:id="@+id/subjectPeriod"
            android:layout_row="4"
            android:layout_column="13"
            android:textSize="20sp"
            android:textIsSelectable="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/subject_details_grade"
            android:id="@+id/textView5"
            android:layout_row="5"
            android:layout_column="0"
            android:textSize="20sp"/>

        <EditText
            android:layout_width="46dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/grade"
            android:linksClickable="false"
            android:layout_row="5"
            android:layout_column="13"
            android:maxLength="4"/>


    </GridLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="UML"
        android:id="@+id/subjectName"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"/>

    <Button
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/subject_details_cancel"
        android:id="@+id/cancelBtn"
        android:background = "@drawable/button_selector"
        android:textColor="@color/white"
        android:layout_marginTop="70dp"
        android:layout_below="@+id/gridLayout2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="40dp"/>

    <Button
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/subject_details_submit"
        android:id="@+id/saveBtn"
        android:background = "@drawable/button_selector"
        android:textColor="@color/white"
        android:layout_alignTop="@+id/cancelBtn"
        android:layout_alignRight="@+id/gridLayout2"
        android:layout_alignEnd="@+id/gridLayout2"
        android:layout_marginRight="40dp"
        />

</RelativeLayout>
